feat: Optimize symbol cache updates and subscriptions